--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,3 +1,27 @@
+Changes in dlnm 1.0.1
+=======================
+
+Major changes
+-------------
+
+    o	The dataset chicagoNMMAPS has been added, relaxing the dependence on 
+	the package NMMAPSlite. Now the examples can be run using these data 
+	and without an internet connection.
+
+    o	The function crosspred() has been improved: now there is no constraint 
+	on the range of the predicted values. Moreover, the values 'model.class' 
+	and 'model.link' have been added. The command now works also when the 
+	estimation is carried out by 'clogit()'
+
+Minor changes
+-------------
+
+    o	The section 'Functions' in the vignette 'dlnmOverview' has been reduced: 
+	A reference to the functions help pages has been added.
+
+    o	Help pages, examples and vignette changed accordingly.
+
+
 =======================
 Changes in dlnm 0.4.1
 =======================
